# spacechains-generator

./: Cargo.toml  README.md
src/: config_file.rs  covenant.rs  main.rs  utils.rs  wallet_manager.rs
