[package]
name = "spacechains-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.26.0", default-feature = false, features = ["all-keys", "sqlite-bundled", "rpc"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
dirs = "4.0"
confy = "0.5.1"